2.Advanced/gke-leveraging-advanced-features/yaml-files/gke-networking/create-priviledged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: priviledged-spikey-pod
spec:
  containers:
    - name: spikey-website-pod
      image: gcr.io/spikey-gke/spikey-website:v1
      securityContext:
        privileged: true
