2.Advanced/gke-leveraging-advanced-features/yaml-files/gke-networking/internal-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spikey-internal-service
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: spikey-website
spec:
  type: LoadBalancer
  ports:
  - name: port-name
    port: 80
    protocol: TCP 
  selector:
    app: spikey-website # label selector for Pods to target
