2.Advanced/gke-leveraging-advanced-features/yaml-files/gke-networking/spikey-neg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spikey-website-svc 
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates an NEG after an Ingress is created
spec: 
  selector:
    run: spikey-website 
  ports:
  - port: 80 
    protocol: TCP
    targetPort: 9376 # Should match the containerPort used by the Deployment's containers
