2.Advanced/gke-leveraging-advanced-features/yaml-files/gke-networking/spikey-neg-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spikey-website-ingress
spec:
  backend:
    serviceName: spikey-website-svc # Name of the Service targeted by the Ingress
    servicePort: 80 # Should match the port used by the Service
