2.Advanced/gke-leveraging-advanced-features/yaml-files/gke-networking/spikey-allow-from-dev.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: spikey-allow-from-dev
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: spikey-website
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dev
